[gd_scene load_steps=4 format=3 uid="uid://ff5rlhvys7dr"]

[ext_resource type="Script" uid="uid://bdnm7lglufoxt" path="res://BlinkEffect/BlinkEffect.gd" id="1_1k008"]
[ext_resource type="Shader" uid="uid://d0pcxwfjewp36" path="res://BlinkEffect/blink_effect.gdshader" id="1_jf3lr"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1k008"]
shader = ExtResource("1_jf3lr")
shader_parameter/blink_progress = 0.0
shader_parameter/open_margin = 1.30000001425
shader_parameter/curvature = 0.30000001425
shader_parameter/blur_size = 0.05

[node name="BlinkEffect" type="CanvasLayer"]
layer = 128
script = ExtResource("1_1k008")

[node name="Overlay" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_1k008")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="AutoBlinkTimer" type="Timer" parent="."]

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="AutoBlinkTimer" to="." method="_on_auto_blink_timer_timeout"]
